tests/testcases/errors/BCE0017-3.boo
"""
BCE0017-3.boo(6,15): BCE0017: The best overload for the method 'BooCompiler.Tests.ByRef.SetValue(System.Int32, System.Int32&)' is not compatible with the argument list '(System.Int32, System.Int32)'.
"""
import BooCompiler.Tests

ByRef.SetValue(1, 1)
